# NotMe-BSOD

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ZwRaiseHardError.cpp  main.cpp
.github/workflows/: c-cpp.yml  cmake-single-platform.yml  cmake.yml
NotMe_CMake/: CMakeLists.txt  NtRaiseHardError.cpp
NotMe_CMake/SetProcessIsCritical/: RtlSetProcessIsCritical.cpp
NotMe_CPP/: AllinOne.cpp  CMakeLists.txt  CloseWindowStation.cpp  NTSD_Winlogon.cpp  NTSD_Winlogon.h  NtRaiseHardError.cpp  PowerShell_Wininit.cpp  RaiseHardError.h  SetProcessIsCritical.cpp  SetProcessIsCritical.h  TaskKill_Wininit.cpp  ZwRaiseHardError.cpp
NotMe_CSharp/: NotMe_CSharp.sln
NotMe_CSharp/CloseWindowStation/: CloseWindowStation.csproj  Program.cs
NotMe_CSharp/GUI/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  NotMe.csproj
NotMe_CSharp/NTSD_Winlogon/: NTSD_Winlogon.csproj  Program.cs
NotMe_CSharp/NtRaiseHardError/: Program.cs
NotMe_CSharp/PowerShell_Wininit/: PowerShell_Wininit.csproj  Program.cs
NotMe_CSharp/RtlSetProcessIsCritical/: Program.cs
NotMe_CSharp/SetProcessIsCritical/: Program.cs  SetProcessIsCritical.csproj
NotMe_CSharp/TaskKill_Wininit/: Program.cs  TaskKill_Wininit.csproj
NotMe_CSharp/ZwRaiseHardError/: Program.cs  ZwRaiseHardError.csproj
NotMe_Console/: NotMe_Console.sln
NotMe_Console/NtRaiseHardError/: NtRaiseHardError.csproj
NotMe_GUI/: App.xaml  MainWindow.xaml  NotMe.csproj  NotMe.sln  NotMe_GUI.sln
NotMe_VCPP/: NotMe_VCPP.sln
RaiseHardError/: NtRaiseHardError.cpp
SetProcessIsCritical/: CMakeLists.txt  RtlSetProcessIsCritical.cpp
(+26 files in other folders)
